# marketplace-support-copilot

./: .gitignore  README.md  pyproject.toml
app/: data_loader.py  models.py
app/rag/: ingest.py
data/: dealers.json  listings.json
knowledge_base/: dealer_onboarding_policy.md  listing_publication_policy.md  manual_review_policy.md
tests/: test_data_loader.py  test_models.py
