[project]
name = "marketplace-support-copilot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastembed>=0.8.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-text-splitters>=1.1.2",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
